correct save locations
the user data was being saved to a folder that was nested a layer too deep (world/world/playerdata)

I corrected that and also made the master_checklist.json  and  hunt_winner.json file save into the corrected playerdata location as well. (Previously they saved to the root folder of the world save location)